--- a/Iteracion3/decisions/0002.1-seleccion-tipo-base-datos.md
+++ b/Iteracion3/decisions/0002.1-seleccion-tipo-base-datos.md
@@ -1,6 +1,6 @@
 ---
-status: "accepted"
-date: 2024-11-06
+status: "proposed"
+date: 2024-11-12
 decision-makers: Adrián Muñoz y Delia Martínez
 consulted: ASC
 informed: ASJ y ASC
