--- a/Iteracion3/decisions/0001.1-acceso-desde-pc-movil.md
+++ b/Iteracion3/decisions/0001.1-acceso-desde-pc-movil.md
@@ -16,16 +16,16 @@ Se podrá acceder a la aplicación o bien desde PC o bien desde el móvil.
 
 ## Decision Drivers
 
-- RF-1: Arquitectura con una parte de clientes PC y móvil
+* RF-1: Arquitectura con una parte de clientes PC y móvil
 
 ## Considered Options
 
-- 0003.1-1: API Gateway
-- 0003.1-2: Arquitectura Monolítica: Mantener la arquitectura monolítica actual tal como está, sin reemplazar el protocolo de acceso con HTTP/REST.
+* 0003.1-1: API Gateway
+* 0003.1-2: Arquitectura Monolítica: Mantener la arquitectura monolítica actual tal como está, sin reemplazar el protocolo de acceso con HTTP/REST.
 
 ## Decision Outcome
 
-Chosen option: API Gateway, porque responde a la necesidad de reemplazar el protocolo de acceso de la arquitectura monolítica actual con HTTP/REST y establecer un único punto de entrada para las solicitudes de API. Además este patrón facilita el acceso desde distintos tipos de clientes (PC y móviles).
+Chosen option: 0003.1-1: API Gateway, porque responde a la necesidad de reemplazar el protocolo de acceso de la arquitectura monolítica actual con HTTP/REST y establecer un único punto de entrada para las solicitudes de API. Además este patrón facilita el acceso desde distintos tipos de clientes (PC y móviles).
 
 ## Pros and Cons of the Options
 
