--- a/Iteracion3/decisions/0002.1-seleccion-tipo-base-de-datos.md
+++ b/Iteracion3/decisions/0002.1-seleccion-tipo-base-de-datos.md
@@ -16,38 +16,38 @@ El sistema necesita almacenar datos de clientes y pedidos en dos bases de datos 
 
 ## Decision Drivers
 
-- RF-2.1: La aplicación debe permitir acceder a los clientes a sus datos personales.
-- RF-2.2: La aplicación debe permitir acceder a la información sobre los pedidos y sobre los clientes de la empresa.
-- RD-1: Base de Datos SQL.
+* RF-2.1: La aplicación debe permitir acceder a los clientes a sus datos personales.
+* RF-2.2: La aplicación debe permitir acceder a la información sobre los pedidos y sobre los clientes de la empresa.
+* RD-1: Base de Datos SQL.
 
 ## Considered Options
 
-- 0002.1-1: MySQL
-- 0002.1-2: Oracle Database
-- 0002.1-3: Microsoft SQL Server
+* 0002.1-1: MySQL
+* 0002.1-2: Oracle Database
+* 0002.1-3: Microsoft SQL Server
 
 ## Decision Outcome
 
-Chosen option: MySQL, porque es fácil de implementar y es una gran opción para acceder a los datos de los clientes desde las aplicaciones de PC y móvil, además de que se utilizará el driver correspondiente.
+Chosen option: 0002.1-1: MySQL, porque es fácil de implementar y es una gran opción para acceder a los datos de los clientes desde las aplicaciones de PC y móvil, además de que se utilizará el driver correspondiente.
 
 ## Pros and Cons of the Options
 
 ### MySQL
 
-- Good, because es de código abierto y gratuito, lo que lo hace accesible para proyectos pequeños y medianos sin un alto presupuesto.
-- Good, because es compatible con múltiples plataformas (Windows, Linux, macOS), lo que facilita su integración en aplicaciones multiplataforma.
-- Bad, because su escalabilidad es moderada, lo que puede convertirse en un problema en aplicaciones de muy alta carga o con grandes volúmenes de transacciones simultáneas.
+* Good, because es de código abierto y gratuito, lo que lo hace accesible para proyectos pequeños y medianos sin un alto presupuesto.
+* Good, because es compatible con múltiples plataformas (Windows, Linux, macOS), lo que facilita su integración en aplicaciones multiplataforma.
+* Bad, because su escalabilidad es moderada, lo que puede convertirse en un problema en aplicaciones de muy alta carga o con grandes volúmenes de transacciones simultáneas.
 
 ### Oracle Database
 
-- Good, because es altamente escalable y adecuado para aplicaciones que manejan grandes volúmenes de datos, siendo ideal para empresas grandes o aplicaciones de alto rendimiento.
-- Bad, because su implementación y mantenimiento requieren experiencia técnica avanzada, lo que aumenta la complejidad y los costes operativos.
-- Bad, because su alto nivel de características y configuraciones puede ser excesivo para aplicaciones más simples, lo que lo hace menos flexible para entornos no empresariales.
+* Good, because es altamente escalable y adecuado para aplicaciones que manejan grandes volúmenes de datos, siendo ideal para empresas grandes o aplicaciones de alto rendimiento.
+* Bad, because su implementación y mantenimiento requieren experiencia técnica avanzada, lo que aumenta la complejidad y los costes operativos.
+* Bad, because su alto nivel de características y configuraciones puede ser excesivo para aplicaciones más simples, lo que lo hace menos flexible para entornos no empresariales.
 
 ### Microsoft SQL Server
 
-- Good, because ofrece características avanzadas de seguridad como cifrado, autenticación multifactor y auditoría, ideales para aplicaciones empresariales que manejan datos sensibles.
-- Good, because tiene un alto rendimiento y es capaz de manejar grandes volúmenes de datos y transacciones complejas, siendo adecuado para empresas medianas y grandes.
-- Bad, because el coste de las licencias puede ser elevado, lo que lo convierte en una opción cara para proyectos con presupuestos limitados.
-- Bad, because requiere personal especializado para su configuración y administración, lo que incrementa los costes operativos.
-- Bad, because su dependencia del ecosistema de Microsoft puede ser un inconveniente si no utilizas otras herramientas de la compañía, limitando la flexibilidad y la portabilidad.
+* Good, because ofrece características avanzadas de seguridad como cifrado, autenticación multifactor y auditoría, ideales para aplicaciones empresariales que manejan datos sensibles.
+* Good, because tiene un alto rendimiento y es capaz de manejar grandes volúmenes de datos y transacciones complejas, siendo adecuado para empresas medianas y grandes.
+* Bad, because el coste de las licencias puede ser elevado, lo que lo convierte en una opción cara para proyectos con presupuestos limitados.
+* Bad, because requiere personal especializado para su configuración y administración, lo que incrementa los costes operativos.
+* Bad, because su dependencia del ecosistema de Microsoft puede ser un inconveniente si no utilizas otras herramientas de la compañía, limitando la flexibilidad y la portabilidad.
