--- a/Iteracion4/Decisiones/0001.2-acceso-desde-pc-movil.md
+++ b/Iteracion4/Decisiones/0001.2-acceso-desde-pc-movil.md
@@ -1,5 +1,5 @@
 ---
-status: "proposed"
+status: "accepted"
 date: 2024-11-19
 decision-makers: Adrián Muñoz y Delia Martínez
 consulted: ASC
@@ -25,7 +25,7 @@ Se podrá acceder a la aplicación o bien desde PC o bien desde el móvil.
 
 ## Decision Outcome
 
-Chosen option: 0003.1-1: API Gateway, porque responde a la necesidad de reemplazar el protocolo de acceso de la arquitectura monolítica actual con HTTP/REST y establecer un único punto de entrada para las solicitudes de API. Además este patrón facilita el acceso desde distintos tipos de clientes (PC y móviles).
+Chosen option: 0001.2-1: API Gateway, porque responde a la necesidad de reemplazar el protocolo de acceso de la arquitectura monolítica actual con HTTP/REST y establecer un único punto de entrada para las solicitudes de API. Además este patrón facilita el acceso desde distintos tipos de clientes (PC y móviles).
 
 ## Pros and Cons of the Options
 
